--- a/templates/base.html
+++ b/templates/base.html
@@ -33,11 +33,16 @@
                             </svg>
                         </button>
                         <ul class="absolute right-0 hidden group-hover:block bg-white border mt-2 w-48 rounded-md shadow-lg z-10">
-                            <li class="px-4 py-2 text-sm text-gray-700 border-b">Signed in as <br><strong>{{ user.email }}</strong></li>
+                            <li class="px-4 py-2 text-sm text-gray-700 border-b">
+                                Signed in as <br><strong>{{ user.email }}</strong>
+                            </li>
                             <li>
-                                <a href="{% url 'account_logout' %}" class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100">
-                                    Sign out
-                                </a>
+                                <form method="post" action="{% url 'account_logout' %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-gray-100">
+                                        Sign out
+                                    </button>
+                                </form>
                             </li>
                         </ul>
                     </div>
@@ -47,6 +52,7 @@
                     </a>
                 {% endif %}
             </div>
+
         </div>
     </header>
 
