--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -44,16 +44,24 @@
 
         <div class="mt-6">
             <hr class="mb-4 border-gray-300">
-            <a href="{% provider_login_url 'google' %}" class="flex items-center justify-center w-full px-4 py-2 text-sm font-semibold text-white bg-red-600 rounded hover:bg-red-700">
-                <svg class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="currentColor">
-                    <path d="M21.35 11.1H12v2.9h5.6c-.25 1.3-.95 2.4-2 3.2v2.6h3.2c1.85-1.7 2.9-4.2 2.9-7.2 0-.7-.05-1.3-.15-1.9z" fill="#fff"/>
-                    <path d="M12 22c2.4 0 4.4-.8 5.9-2.2l-3.2-2.6c-.9.6-2.1 1-3.4 1-2.6 0-4.9-1.8-5.7-4.2H3.3v2.7C4.8 19.7 8.1 22 12 22z" fill="#fff"/>
-                    <path d="M6.3 13.2c-.2-.6-.3-1.3-.3-2s.1-1.4.3-2V6.5H3.3C2.5 8.1 2 9.9 2 12s.5 3.9 1.3 5.5l3-2.3z" fill="#fff"/>
-                    <path d="M12 4.5c1.3 0 2.4.4 3.3 1.1l2.5-2.5C16.4 1.7 14.4 1 12 1 8.1 1 4.8 3.3 3.3 6.5l3 2.3c.8-2.4 3.1-4.3 5.7-4.3z" fill="#fff"/>
-                </svg>
-                Login with Google
-            </a>
+
+            <form method="post" action="{% provider_login_url 'google' method='post' %}">
+                {% csrf_token %}
+                <button type="submit" class="flex items-center justify-center w-full px-4 py-2 text-sm font-semibold text-white bg-red-600 rounded hover:bg-red-700">
+                    <svg class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M21.35 11.1H12v2.9h5.6c-.25 1.3-.95 2.4-2 3.2v2.6h3.2c1.85-1.7 2.9-4.2 2.9-7.2 0-.7-.05-1.3-.15-1.9z" fill="#fff"/>
+                        <path d="M12 22c2.4 0 4.4-.8 5.9-2.2l-3.2-2.6c-.9.6-2.1 1-3.4 1-2.6 0-4.9-1.8-5.7-4.2H3.3v2.7C4.8 19.7 8.1 22 12 22z" fill="#fff"/>
+                        <path d="M6.3 13.2c-.2-.6-.3-1.3-.3-2s.1-1.4.3-2V6.5H3.3C2.5 8.1 2 9.9 2 12s.5 3.9 1.3 5.5l3-2.3z" fill="#fff"/>
+                        <path d="M12 4.5c1.3 0 2.4.4 3.3 1.1l2.5-2.5C16.4 1.7 14.4 1 12 1 8.1 1 4.8 3.3 3.3 6.5l3 2.3c.8-2.4 3.1-4.3 5.7-4.3z" fill="#fff"/>
+                    </svg>
+                    Login with Google btn
+                </button>
+            </form>
         </div>
+
+
+
+
     </div>
 </body>
 </html>
