--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -42,6 +42,13 @@
             </a>
         </div>
 
+        <div class="mt-2 text-center">
+            <span class="text-sm text-gray-600">Don't have an account?</span>
+            <a href="{% url 'account_signup' %}" class="text-sm text-blue-500 hover:underline ml-1">
+                Sign up
+            </a>
+        </div>
+
         <div class="mt-6">
             <hr class="mb-4 border-gray-300">
 
