--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,11 @@
 {% load static %}
 {% load socialaccount %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+      {{ form.media }}
     <meta charset="UTF-8">
     <title>{% block title %}My App{% endblock %}</title>
     <link href="{% static 'css/dist/styles.css' %}" rel="stylesheet">
@@ -62,5 +65,11 @@
         {% endblock %}
     </main>
 
+   
 </body>
 </html>
+
+<script>
+    // Fallback: if the widget isn’t auto-instantiated
+    $(function () { $(".django-select2").select2(); });
+  </script>
